# ml-boilerplate

./: .gitignore  pyproject.toml  requirements.txt
notebooks/: cnn.ipynb  rnn.ipynb
src/: torch_utils.py
