[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "ml-boilerplate"
version = "0.1.0"
description = "ML Boilerplate"
readme = "README.md"
requires-python = ">=3.11"
authors = [
    {name = "Kate C", email = "castillo.akatelyn@gmail.com"},
]
dependencies = [
]

[project.optional-dependencies]
dev = [
]